# curation_mvp

./: README.md  databricks.yml  pyproject.toml
conf/: global_config.json  tables_config.json
conf/sql/: claimants_transform.sql  claims_transform.sql  customer_transform.sql  customers_transform.sql  orders_transform.sql  pega_underwriting_transform.sql  policies_transform.sql  products_transform.sql
conf/tables/: claims.json  customer.json
docs/: design_document.md  implementation_plan.md
fixtures/: adjuster_lookup.sql  state_lookup.sql
fixtures/data/: bronze_claimants.jsonl  bronze_claims.jsonl  bronze_policies.jsonl
query/: claims.sql  customer.sql
resources/: curation_framework.job.yml  curation_framework.pipeline.yml  integration_test.job.yml  setup_data.job.yml
resources/jobs/: maintenance_cleanup.yml
src/: notebook.ipynb  pipeline.ipynb  setup_data.ipynb
src/config/: __init__.py  environment.py  metadata_loader.py
src/curation_framework/: __init__.py  main.py  silver_processor.py  utils.py
src/executor/: job_executor.py
src/load_strategy/: __init__.py  base.py  delete_insert.py  factory.py  insert_only.py  scd1.py  scd2.py  truncate_insert.py
src/pipeline/: lakeflow_curation_pipeline.py
src/reader/: __init__.py  reference_reader.py  source_reader.py
src/state/: __init__.py  watermark.py
src/transform/: __init__.py  hash_generator.py  sql_executor.py  template_resolver.py
src/utils/: __init__.py  cleanup_job.py  dedup.py  logging.py  spark_session.py  (+1 more)
tests/: integration_test_pipeline.py  main_test.py  transform_test.py
(+5 files in other folders)
