[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curation_framework"
version = "0.1.0"
description = "Metadata-Driven Spark Batch Framework for Databricks"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5.0",
    "pyyaml>=6.0",
]

# Define console script entry point
[project.scripts]
job-executor = "executor.job_executor:main"

# Configure setuptools to find packages in src/
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["config*", "executor*", "load_strategy*", "pipeline*", "reader*", "state*", "transform*", "utils*", "writer*"]
